--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Menu -->
     <div class="contenedor-header">
         <header>
-            <h1>FIT <span class="txtVerde">Rev</span></h1>
+            <h1>FIT <span class="txtVerde">REVOLUTION</span></h1>
             <nav id="nav">
                 <a href="#inicio">Inicio</a>
                 <a href="#objetivo">Objetivo</a>
